Add /select-all API for tag groups
